# SerialDemo

./: README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app-demo/: build.gradle.kts
app-demo/src/main/: AndroidManifest.xml
app-demo/src/main/java/com/welo/serialdemo/: Application.java  ConsoleActivity.java  LoopbackActivity.java  MainMenu.java  SendingDataActivity.java  SerialPortPreferences.java  WelooTestActivity.java
app-demo/src/main/java/com/welo/serialdemo/tools/: SerialPort.java
app-demo/src/main/java/com/weloo/serialdemo/: Application.java  ConsoleActivity.java  LoopbackActivity.java  MainMenu.java  SendingDataActivity.java  SerialPortActivity.java  SerialPortPreferences.java  WelooTestActivity.java
app-demo/src/main/java/com/weloo/serialdemo/tools/: SerialPort.java  SerialPortFinder.java
app-demo/src/main/res/layout/: main.xml  sending_data.xml  weloo_test.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/com/welo/serialdemo/: Application.java  ConsoleActivity.java  LoopbackActivity.java  MainMenu.java  SendingDataActivity.java  SerialPortActivity.java  SerialPortPreferences.java
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
jnilib/: build.gradle.kts
jnilib/src/main/jni/: SerialPort.c  SerialPort.h
sdk/: build.gradle.kts
sdk/src/main/: AndroidManifest.xml
sdk/src/main/jni/: Application.mk  SerialPort.c  SerialPort.h  gen_SerialPort_h.sh
serial-port-sdk/src/main/jni/: CMakeLists.txt  SerialPort.c
(+12 files in other folders)
